llvm/llvm.pas


function LLVMCreateGenericValueOfInt(Ty:LLVMTypeRef; N:qword; IsSigned:longint):LLVMGenericValueRef;cdecl;external libname name 'LLVMCreateGenericValueOfInt';
function LLVMCreateGenericValueOfPointer(P:pointer):LLVMGenericValueRef;cdecl;external libname name 'LLVMCreateGenericValueOfPointer';
function LLVMCreateGenericValueOfFloat(Ty:LLVMTypeRef; N:double):LLVMGenericValueRef;cdecl;external libname name 'LLVMCreateGenericValueOfFloat';
function LLVMGenericValueIntWidth(GenValRef:LLVMGenericValueRef):dword;cdecl;external libname name 'LLVMGenericValueIntWidth';
function LLVMGenericValueToInt(GenVal:LLVMGenericValueRef; IsSigned:longint):qword;cdecl;external libname name 'LLVMGenericValueToInt';
function LLVMGenericValueToPointer(GenVal:LLVMGenericValueRef):pointer;cdecl;external libname name 'LLVMGenericValueToPointer';
function LLVMGenericValueToFloat(TyRef:LLVMTypeRef; GenVal:LLVMGenericValueRef):double;cdecl;external libname name 'LLVMGenericValueToFloat';
procedure LLVMDisposeGenericValue(GenVal:LLVMGenericValueRef);cdecl;external libname name 'LLVMDisposeGenericValue';
{===-- Operations on execution engines -----------------------------------=== }
function LLVMCreateExecutionEngine(OutEE:pLLVMExecutionEngineRef; MP:LLVMModuleProviderRef; OutError:Ppchar):longint;cdecl;external libname name 'LLVMCreateExecutionEngine';
function LLVMCreateInterpreter(OutInterp:pLLVMExecutionEngineRef; MP:LLVMModuleProviderRef; OutError:Ppchar):longint;cdecl;external libname name 'LLVMCreateInterpreter';
function LLVMCreateJITCompiler(OutJIT:pLLVMExecutionEngineRef; MP:LLVMModuleProviderRef; OptLevel:dword; OutError:Ppchar):longint;cdecl;external libname name 'LLVMCreateJITCompiler';
procedure LLVMDisposeExecutionEngine(EE:LLVMExecutionEngineRef);cdecl;external libname name 'LLVMDisposeExecutionEngine';
procedure LLVMRunStaticConstructors(EE:LLVMExecutionEngineRef);cdecl;external libname name 'LLVMRunStaticConstructors';
procedure LLVMRunStaticDestructors(EE:LLVMExecutionEngineRef);cdecl;external libname name 'LLVMRunStaticDestructors';
(* Const before declarator ignored *)
(* Const before declarator ignored *)
function LLVMRunFunctionAsMain(EE:LLVMExecutionEngineRef; F:LLVMValueRef; ArgC:dword; ArgV:Ppchar; EnvP:Ppchar):longint;cdecl;external libname name 'LLVMRunFunctionAsMain';
function LLVMRunFunction(EE:LLVMExecutionEngineRef; F:LLVMValueRef; NumArgs:dword; Args:pLLVMGenericValueRef):LLVMGenericValueRef;cdecl;external libname name 'LLVMRunFunction';
procedure LLVMFreeMachineCodeForFunction(EE:LLVMExecutionEngineRef; F:LLVMValueRef);cdecl;external libname name 'LLVMFreeMachineCodeForFunction';
procedure LLVMAddModuleProvider(EE:LLVMExecutionEngineRef; MP:LLVMModuleProviderRef);cdecl;external libname name 'LLVMAddModuleProvider';
function LLVMRemoveModuleProvider(EE:LLVMExecutionEngineRef; MP:LLVMModuleProviderRef; OutMod:pLLVMModuleRef; OutError:Ppchar):longint;cdecl;external libname name 'LLVMRemoveModuleProvider';
function LLVMFindFunction(EE:LLVMExecutionEngineRef; Name:pchar; OutFn:pLLVMValueRef):longint;cdecl;external libname name 'LLVMFindFunction';
function LLVMGetExecutionEngineTargetData(EE:LLVMExecutionEngineRef):LLVMTargetDataRef;cdecl;external libname name 'LLVMGetExecutionEngineTargetData';
procedure LLVMAddGlobalMapping(EE:LLVMExecutionEngineRef; Global:LLVMValueRef; Addr:pointer);cdecl;external libname name 'LLVMAddGlobalMapping';
function LLVMGetPointerToGlobal(EE:LLVMExecutionEngineRef; Global:LLVMValueRef):pointer;cdecl;external libname name 'LLVMGetPointerToGlobal';
{ LinkTimeOptimizer.h  }
{/ This provides a dummy type for pointers to the LTO object. }
type

   llvm_lto_t = pointer;
{/ This provides a C-visible enumerator to manage status codes. }
{/ This should map exactly onto the C++ enumerator LTOStatus. }
{  Added C-specific error codes }

   llvm_lto_status = (LLVM_LTO_UNKNOWN,LLVM_LTO_OPT_SUCCESS,
     LLVM_LTO_READ_SUCCESS,LLVM_LTO_READ_FAILURE,
     LLVM_LTO_WRITE_FAILURE,LLVM_LTO_NO_TARGET,
     LLVM_LTO_NO_WORK,LLVM_LTO_MODULE_MERGE_FAILURE,
     LLVM_LTO_ASM_FAILURE,LLVM_LTO_NULL_OBJECT
     );
   llvm_lto_status_t = llvm_lto_status;
{/ This provides C interface to initialize link time optimizer. This allows }
{/ linker to use dlopen() interface to dynamically load LinkTimeOptimizer. }
{/ extern "C" helps, because dlopen() interface uses name to find the symbol. }

function llvm_create_optimizer:llvm_lto_t;cdecl;external libname name 'llvm_create_optimizer';
procedure llvm_destroy_optimizer(lto:llvm_lto_t);cdecl;external libname name 'llvm_destroy_optimizer';
function llvm_read_object_file(lto:llvm_lto_t; input_filename:pchar):llvm_lto_status_t;cdecl;external libname name 'llvm_read_object_file';
function llvm_optimize_modules(lto:llvm_lto_t; output_filename:pchar):llvm_lto_status_t;cdecl;external libname name 'llvm_optimize_modules';
{ lto.h  }

const
   LTO_API_VERSION = 3;   
{ log2 of alignment  }
type

   lto_symbol_attributes = (LTO_SYMBOL_ALIGNMENT_MASK := $0000001F,LTO_SYMBOL_PERMISSIONS_MASK := $000000E0,
     LTO_SYMBOL_PERMISSIONS_CODE := $000000A0,LTO_SYMBOL_PERMISSIONS_DATA := $000000C0,
     LTO_SYMBOL_PERMISSIONS_RODATA := $00000080,LTO_SYMBOL_DEFINITION_MASK := $00000700,
     LTO_SYMBOL_DEFINITION_REGULAR := $00000100,LTO_SYMBOL_DEFINITION_TENTATIVE := $00000200,
     LTO_SYMBOL_DEFINITION_WEAK := $00000300,LTO_SYMBOL_DEFINITION_UNDEFINED := $00000400,
     LTO_SYMBOL_DEFINITION_WEAKUNDEF := $00000500,
     LTO_SYMBOL_SCOPE_MASK := $00003800,LTO_SYMBOL_SCOPE_INTERNAL := $00000800,
     LTO_SYMBOL_SCOPE_HIDDEN := $00001000,LTO_SYMBOL_SCOPE_PROTECTED := $00002000,
     LTO_SYMBOL_SCOPE_DEFAULT := $00001800);

   lto_debug_model = (LTO_DEBUG_MODEL_NONE := 0,LTO_DEBUG_MODEL_DWARF := 1
     );

   lto_codegen_model = (LTO_CODEGEN_PIC_MODEL_STATIC := 0,LTO_CODEGEN_PIC_MODEL_DYNAMIC := 1,
     LTO_CODEGEN_PIC_MODEL_DYNAMIC_NO_PIC := 2
     );
{* opaque reference to a loaded object module  }

   lto_module_t = LTOModule;
{* opaque reference to a code generator  }

   lto_code_gen_t = LTOCodeGenerator;
{*
 * Returns a printable string.
  }

function lto_get_version:pchar;cdecl;external libname name 'lto_get_version';
{*
 * Returns the last error string or NULL if last operation was sucessful.
  }
function lto_get_error_message:pchar;cdecl;external libname name 'lto_get_error_message';
{*
 * Checks if a file is a loadable object file.
  }
function lto_module_is_object_file(path:pchar):bool;cdecl;external libname name 'lto_module_is_object_file';
{*
 * Checks if a file is a loadable object compiled for requested target.
  }
function lto_module_is_object_file_for_target(path:pchar; target_triple_prefix:pchar):bool;cdecl;external libname name 'lto_module_is_object_file_for_target';
{*
 * Checks if a buffer is a loadable object file.
  }
function lto_module_is_object_file_in_memory(mem:pointer; length:size_t):bool;cdecl;external libname name 'lto_module_is_object_file_in_memory';
{*
 * Checks if a buffer is a loadable object compiled for requested target.
  }
function lto_module_is_object_file_in_memory_for_target(mem:pointer; length:size_t; target_triple_prefix:pchar):bool;cdecl;external libname name 'lto_module_is_object_file_in_memory_for_target';
{*
 * Loads an object file from disk.
 * Returns NULL on error (check lto_get_error_message() for details).
  }
function lto_module_create(path:pchar):lto_module_t;cdecl;external libname name 'lto_module_create';
{*
 * Loads an object file from memory.
 * Returns NULL on error (check lto_get_error_message() for details).
  }
function lto_module_create_from_memory(mem:pointer; length:size_t):lto_module_t;cdecl;external libname name 'lto_module_create_from_memory';
{*
 * Frees all memory internally allocated by the module.
 * Upon return the lto_module_t is no longer valid.
  }
procedure lto_module_dispose(module:lto_module_t);cdecl;external libname name 'lto_module_dispose';
{*
 * Returns triple string which the object module was compiled under.
  }
function lto_module_get_target_triple(module:lto_module_t):pchar;cdecl;external libname name 'lto_module_get_target_triple';
{*
 * Returns the number of symbols in the object module.
  }
function lto_module_get_num_symbols(module:lto_module_t):dword;cdecl;external libname name 'lto_module_get_num_symbols';
{*
 * Returns the name of the ith symbol in the object module.
  }
function lto_module_get_symbol_name(module:lto_module_t; index:dword):pchar;cdecl;external libname name 'lto_module_get_symbol_name';
{*
 * Returns the attributes of the ith symbol in the object module.
  }
function lto_module_get_symbol_attribute(module:lto_module_t; index:dword):lto_symbol_attributes;cdecl;external libname name 'lto_module_get_symbol_attribute';
{*
 * Instantiates a code generator.
 * Returns NULL on error (check lto_get_error_message() for details).
  }
function lto_codegen_create:lto_code_gen_t;cdecl;external libname name 'lto_codegen_create';
{*
 * Frees all code generator and all memory it internally allocated.
 * Upon return the lto_code_gen_t is no longer valid.
  }
procedure lto_codegen_dispose(para1:lto_code_gen_t);cdecl;external libname name 'lto_codegen_dispose';
{*
 * Add an object module to the set of modules for which code will be generated.
 * Returns true on error (check lto_get_error_message() for details).
  }
function lto_codegen_add_module(cg:lto_code_gen_t; module:lto_module_t):bool;cdecl;external libname name 'lto_codegen_add_module';
{*
 * Sets if debug info should be generated.
 * Returns true on error (check lto_get_error_message() for details).
  }
function lto_codegen_set_debug_model(cg:lto_code_gen_t; para2:lto_debug_model):bool;cdecl;external libname name 'lto_codegen_set_debug_model';
{*
 * Sets which PIC code model to generated.
 * Returns true on error (check lto_get_error_message() for details).
  }
function lto_codegen_set_pic_model(cg:lto_code_gen_t; 
                                   para2: lto_codegen_model): bool;
cdecl;external libname name 'lto_codegen_set_pic_model';
{*
 * Sets the location of the "gcc" to run. If not set, libLTO will search for
 * "gcc" on the path.
  }
procedure lto_codegen_set_gcc_path(cg:lto_code_gen_t; path:pchar);
cdecl;external libname name 'lto_codegen_set_gcc_path';
{*
 * Sets the location of the assembler tool to run. If not set, libLTO
 * will use gcc to invoke the assembler.
  }
procedure lto_codegen_set_assembler_path(cg:lto_code_gen_t; path:pchar);
cdecl;external libname name 'lto_codegen_set_assembler_path';
{*
 * Adds to a list of all global symbols that must exist in the final
 * generated code.  If a function is not listed, it might be
 * inlined into every usage and optimized away.
  }
procedure lto_codegen_add_must_preserve_symbol(cg:lto_code_gen_t; symbol:pchar);
cdecl;external libname name 'lto_codegen_add_must_preserve_symbol';
{*
 * Writes a new object file at the specified path that contains the
 * merged contents of all modules added so far.
 * Returns true on error (check lto_get_error_message() for details).
  }
function lto_codegen_write_merged_modules(cg:lto_code_gen_t; path:pchar):bool;
cdecl;external libname name 'lto_codegen_write_merged_modules';
{*
 * Generates code for all added modules into one native object file.
 * On sucess returns a pointer to a generated mach-o/ELF buffer and
 * length set to the buffer size.  The buffer is owned by the 
 * lto_code_gen_t and will be freed when lto_codegen_dispose()
 * is called, or lto_codegen_compile() is called again.
 * On failure, returns NULL (check lto_get_error_message() for details).
  }
function lto_codegen_compile(cg:lto_code_gen_t; var length: int): pointer;
cdecl; external libname name 'lto_codegen_compile';
{*
 * Sets options to help debug codegen bugs.
  }
procedure lto_codegen_debug_options(cg: lto_code_gen_t; para2: Pchar);
cdecl;external libname name 'lto_codegen_debug_options';

implementation

end.
